src/style/base.styl
@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700,700i')

@import "./imports"
@import "./animation"
@import "./tooltip"

html
  background $vue-ui-color-light

body
  font-size 16px
  font-family 'Roboto', 'Avenir', Helvetica, Arial, sans-serif
  -webkit-font-smoothing antialiased
  -moz-osx-font-smoothing grayscale
  color $vue-ui-color-dark
  margin 0

.vue-ui-dark-mode
  color $vue-ui-color-light
  background $vue-ui-color-darker
  body
    color @color

hr
  border none
  height 1px
  background $vue-ui-color-light-neutral

a
  color $vue-ui-color-primary
  text-decoration none
  .vue-ui-icon
    svg
      fill @color

h1, h2, h3, h4, h5, h6
  font-weight lighter
  margin 24px 0 8px
  &:first-child
    margin-top 0

h1
  font-size 42px

h2
  font-size 32px

h3
  font-size 26px

h4
  font-size 22px

h5
  font-size 18px

h6
  font-size 16px

p
  margin 0 0 8px

ul
  margin 4px 0

.vue-ui-no-scroll
  overflow hidden

.vue-ui-spacer
  flex 100% 1 1 !important
  width 0
  height 0

.vue-ui-empty
  color rgba($vue-ui-color-dark, .5)
  padding 24px
  text-align center
  box-sizing border-box
  .vue-ui-icon
    svg
      fill @color

.vue-ui-text
  &.banner
    padding 12px
    display flex
    align-items center
    border-radius $br
    > .vue-ui-icon
      &:first-child
        margin-right 10px
  &.primary
    vue-ui-text-colors($vue-ui-color-primary)
  &.accent
    vue-ui-text-colors($vue-ui-color-accent)
  &.danger
    vue-ui-text-colors($vue-ui-color-danger)
  &.warning
    vue-ui-text-colors($vue-ui-color-warning)
  &.info
    vue-ui-text-colors($vue-ui-color-info)
  &.success
    vue-ui-text-colors($vue-ui-color-success)

.vue-ui-grid
  display grid
  &.default-gap
    grid-gap 12px
  &.big-gap
    grid-gap 24px
  for n in (1..10)
    &.col-{n}
      grid-template-columns repeat(n, 1fr)

    .span-{n}
      grid-column span n

::-webkit-scrollbar
  width 10px
::-webkit-scrollbar-track-piece
  background transparent
::-webkit-scrollbar-track:hover
  background rgba($vue-ui-color-dark-neutral, .05)
  .vue-ui-dark-mode &
    background rgba($vue-ui-color-dark-neutral, .1)
::-webkit-scrollbar-thumb
  background lighten($vue-ui-color-dark-neutral, 60%)
  border none
  &:hover
    background $vue-ui-color-dark-neutral
  .vue-ui-dark-mode &
    background $vue-ui-color-dark
    &:hover
      background lighten($vue-ui-color-dark-neutral, 10%)

